--- a/exercicios/ex022/fundo06.html
+++ b/exercicios/ex022/fundo06.html
@@ -8,16 +8,25 @@
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /* 
+            shorthand - background
+            color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +37,9 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, recusandae tenetur! Id natus veritatis accusamus suscipit hic labore delectus, amet officiis quos beatae alias in sint laudantium, unde sunt fugit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ullam sequi quod earum sint maiores odio dolorum harum accusantium, eius quia saepe, iure mollitia accusamus nisi commodi dolor fugiat est.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro magnam modi deleniti quam. Consequuntur provident officiis adipisci explicabo, alias, unde tempore porro eligendi quo expedita laudantium commodi aliquid earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, recusandae tenetur! Id natus veritatis accusamus suscipit hic labore delectus, amet officiis quos beatae alias in sint laudantium, unde sunt fugit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ullam sequi quod earum sint maiores odio dolorum harum accusantium, eius quia saepe, iure mollitia accusamus nisi commodi dolor fugiat est.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro magnam modi deleniti quam. Consequuntur provident officiis adipisci explicabo, alias, unde tempore porro eligendi quo expedita laudantium commodi aliquid earum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, recusandae tenetur! Id natus veritatis accusamus suscipit hic labore delectus, amet officiis quos beatae alias in sint laudantium, unde sunt fugit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ullam sequi quod earum sint maiores odio dolorum harum accusantium, eius quia saepe, iure mollitia accusamus nisi commodi dolor fugiat est.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro magnam modi deleniti quam. Consequuntur provident officiis adipisci explicabo, alias, unde tempore porro eligendi quo expedita laudantium commodi aliquid earum.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, recusandae tenetur! Id natus veritatis accusamus suscipit hic labore delectus, amet officiis quos beatae alias in sint laudantium, unde sunt fugit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ullam sequi quod earum sint maiores odio dolorum harum accusantium, eius quia saepe, iure mollitia accusamus nisi commodi dolor fugiat est.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro magnam modi deleniti quam. Consequuntur provident officiis adipisci explicabo, alias, unde tempore porro eligendi quo expedita laudantium commodi aliquid earum.</p>
     </main>
 </body>
