--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -5,11 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        iframe {
+            width: 400px;
+            height: 400px;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de iframes</h1>
     <p>
-        Acesse o site do <iframe src="https://cursoemvideo.com" frameborder="0"></iframe>
+        Acessando o site do 
+        <iframe src="https://cursoemvideo.com" frameborder="0">
+            <a href="https://cursoemvideo.com" target="_blank"> Curso em Vídeo</a>
+        </iframe> para aprender a programar.
+    </p>
+    <p>
+        O repositório do Guanabara 
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0">
+            no <a href="https://gustavoguanabara.github.io">Github</a>
+        </iframe> também é bem legal.
     </p>
 </body>
 </html>
