--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -35,7 +35,7 @@
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod repellat atque eius numquam nam veritatis nemo qui, error officia earum praesentium beatae repellendus omnis cum itaque architecto, quis ipsa molestias! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum iusto beatae asperiores sunt placeat ipsam ex est nulla esse! Eum, itaque officia? Eligendi pariatur corrupti expedita magnam voluptates numquam error.
     </p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, ab soluta? Quia voluptates debitis consectetur nihil sint! Fuga praesentium molestiae dolorem ea! Omnis libero voluptatem numquam, minus ipsam nobis molestiae!</p><img src='imagens/cursoemvideo.png'>">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
